<resources>
    <string name="app_name">Entrega1</string>
    <string name="login">LOG-IN</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="signup">SIGN UP</string>
    <string name="idioma">ES</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_email">New email:</string>
    <string name="change">CHANGE</string>
    <string name="enter">ENTER</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="edit_email">CHANGE EMAIL</string>
    <string name="added_users">ADDED USERS</string>
    <string name="ADD">ADD</string>
    <string name="add_user">Add a new user:</string>
    <string name="insert_username">INSERT USERNAME</string>
    <string name="cancel">CANCEL</string>
    <string name="to">To:</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="send">SEND</string>
    <string name="already_account">Already have an account?</string>
    <string name="login_error">Wrong username/password</string>
    <string name="signup_error">Username not available</string>
    <string name="email_error">Insert a valid email</string>
    <string name="already_on_list">User is already added</string>
    <string name="user_not_exists">User does not exist</string>
    <string name="email_changed">Email changed</string>
    <string name="change_email">Change email</string>
    <string name="actual_email">Actual email:</string>
    <string name="has_been_registered">A new user has been registered in the system</string>
    <string name="new_signup">New sign up</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="color">Colour</string>
    <string name="select_theme">Select a theme/color for the application</string>
    <string name="color_application">Color for the application?</string>
    <string name="Map">Map</string>
    <string name="login_30">Log-in 30 seconds ago</string>
    <string name="login_30_titulo">Log-in</string>
    <string name="hour">Hour:</string>
</resources>