<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/iniciaSesionTV"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/usuarioET"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idiomaBTN" />

    <Button
        android:id="@+id/entrarLoginBTN"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:onClick="onClickEntrar"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/contraseñaET"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/contraseñaET"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaET"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/contraseñaET"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/usuarioET"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/usuarioET"
        app:layout_constraintTop_toBottomOf="@+id/usuarioET"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/preguntaTV"
        android:layout_width="207dp"
        android:layout_height="23dp"
        android:text="@string/no_account_yet"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/entrarLoginBTN"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/entrarLoginBTN"
        app:layout_constraintTop_toBottomOf="@+id/entrarLoginBTN"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/signupBTN"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:onClick="onClickRegistrate"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/preguntaTV"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/preguntaTV"
        app:layout_constraintTop_toBottomOf="@+id/preguntaTV"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/idiomaBTN"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:onClick="onClickIdioma"
        android:text="@string/idioma"
        app:layout_constraintBottom_toBottomOf="@+id/iniciaSesionTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iniciaSesionTV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/colorBTN"
        android:layout_width="66dp"
        android:layout_height="54dp"
        android:onClick="onClickColor"
        android:text="@string/color"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/iniciaSesionTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iniciaSesionTV"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>