<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/paraEmailTV"
        android:layout_width="272dp"
        android:layout_height="26dp"
        android:gravity="bottom|center_horizontal"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/paraUsuarioTV"
        app:layout_constraintEnd_toEndOf="@+id/paraUsuarioTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/paraUsuarioTV" />

    <EditText
        android:id="@+id/asuntoET"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/subject"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paraUsuarioTV"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/cuerpoET"
        android:layout_width="345dp"
        android:layout_height="123dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/body"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/asuntoET"
        app:layout_constraintStart_toStartOf="@+id/asuntoET"
        app:layout_constraintTop_toBottomOf="@+id/asuntoET"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/paraUsuarioTV"
        android:layout_width="272dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:gravity="bottom|center_horizontal"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/paraTV"
        app:layout_constraintStart_toEndOf="@+id/paraTV"
        app:layout_constraintTop_toTopOf="@+id/paraTV"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/paraTV"
        android:layout_width="65dp"
        android:layout_height="57dp"
        android:gravity="center_vertical|left"
        android:text="@string/to"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/asuntoET"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/enviarBTN"
        android:layout_width="152dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:onClick="onClickEnviar"
        android:text="@string/send"
        app:layout_constraintStart_toEndOf="@+id/imagenBTN"
        app:layout_constraintTop_toTopOf="@+id/imagenBTN" />

    <ImageButton
        android:id="@+id/imagenBTN"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="196dp"
        android:onClick="onClickImagen"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/cuerpoET"
        app:layout_constraintTop_toBottomOf="@+id/cuerpoET"
        app:srcCompat="@android:drawable/ic_menu_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>